--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,8 +1,171 @@
 {
   "LOGIN_PAGE": {
-    "CONNECTION_PROBLEM": "Connection problem"
+    "CONNECTION_PROBLEM": "Connection problem",
+    "LOGIN_TO_CONTINUE": "Login to continue",
+    "DIGISTORE_ID_EMAIL": "Digistore24-ID/Email",
+    "DIGISTROE_ID_REQUIRED": "Digistore24-ID/Email is required",
+    "PASSWORD": "Password",
+    "FORGOT_PASSWORD": "Forgot password?",
+    "NOT_A_MEMBER": "Not a member yet?",
+    "REGISTER": "Register",
+    "IS_REUQIRED": "is required",
+    "MIN_LENGTH": "Min length of",
+    "IS": "is"
+  },
+  "CANCEL": "Cancel",
+  "LOGIN": "Login",
+  "BACK": "Back",
+  "APPLY": "Apply",
+  "OK": "Ok",
+  "DONE": "Done",
+  "CHOOSE": "Choose",
+  "ALL": "All",
+  "ANY": "Any",
+  "WITHIN": "Within",
+  "WITHOUT": "Without",
+  "ENTER": "Enter",
+  "GENERAL": {
+    "TRANSACTIONS": "Transactions",
+    "EARNINGS": "Earnings",
+    "E_TICKET": "E-Ticket",
+    "SETTINGS": "Settings",
+    "TODAY": "Today",
+    "THIS_DAY": "This Day",
+    "THIS_WEEK": "This Week",
+    "THIS_MONTH": "This Month",
+    "THIS_YEAR": "This Year",
+    "CURRENCY": "Currency",
+    "NO_RESULTS_FOUND": "No results found"
+  },
+  "LANDING_PAGE": {
+    "WELCOME": "Welcome to your automated sales platform!"
   },
   "LOADING_TEXT": "Please wait...",
+  "EARNINGS_PAGE": {
+    "TOTAL": "Total",
+    "MONTH": "Month",
+    "QUARTER": "Quarter",
+    "YEAR": "Year",
+    "GROSS": "Gross",
+    "NET_COMMISSION": "Net Commission",
+    "TOTAL_GROSS": "Total Gross",
+    "TOTAL_NET": "Total Net",
+    "CURRENCY_DESCRIPTION": "Please choose currency for data to be displayed"
+  },
+  "TRANSACTIONS_PAGE": {
+    "SORT_BY": "Sort By",
+    "SEARCH_FILTERS": "Search & Filters",
+    "DATE": "Date",
+    "PRODUCT_NAME": "Product Name/Order ID",
+    "YOUR_EARNINGS": "Your Earnings",
+    "THIS": "This",
+    "NO_RESULTS": "No results found.",
+    "SEE_ALL_TRANSACTIONS": "Try to go through all transactions."
+  },
+  "TRANSACTION_DETAILS_PAGE": {
+    "TRANSACTIONS": "Transactions",
+    "PRODUCT_NAME": "Product Name / ID",
+    "ORDER_ID": "Order ID",
+    "TRANSACTION_ID": "Transaction ID",
+    "GROSS_AMOUNT": "Gross Amount",
+    "NET_COMMISSION": "Net Commission",
+    "TRANSACTION_TYPE": "Transaction Type",
+    "PAYMENT_METHOD": "Payment Method",
+    "CURRENCY": "Currency",
+    "CUSTOMER_DETAILS": "Customer Details",
+    "NAME": "Name",
+    "EMAIL": "Email",
+    "PHONE_NUMBER": "Phone number",
+    "AFFILIATE": "Affiliate",
+    "REPORT_CUSTOMER": "Report Customer"
+  },
+  "REPORT_PAGE": {
+    "REPORT": "Report",
+    "REQUIRED": "Required",
+    "COMMENT_PLACEHOLDER": "Why do you think that this is a fraud order?",
+    "NAME": "Name",
+    "EMAIL": "Email",
+    "AFFILIATE_DESC": "This purchase was made without affiliate",
+    "REPORT_AFFILIATE": "Report Affiliate",
+    "REPORT_BUTTON": "Report",
+    "ORDER_ID": "Order ID"
+  },
+  "SORT_BY_PAGE": {
+    "SORT_BY": "Sort By",
+    "PRODUCT_NAME": "Product name",
+    "EARNING_AMOUNT": "Earning amount",
+    "DATE": "Date",
+    "ASC": "Ascending",
+    "DESC": "Descending",
+    "HIGHEST": "Highest first",
+    "LOWEST": "Lowest first",
+    "THIS": "This"
+  },
+  "SEARCH_FILTERS_PAGE": {
+    "SEARCH_FILTERS": "Search & Filters",
+    "DETAILED_SEARCH": "Detailed search",
+    "ORDER_ID": "Order ID",
+    "CLEAR_ALL": "Clear All",
+    "PRODUCT_NAME": "Product name",
+    "CUSTOMER_INFO": "Customer Info",
+    "FIRSTNAME": "First name",
+    "LASTNAME": "Last name",
+    "EMAIL": "Email",
+    "TRANSACTION_DETAILS": "Transaction details",
+    "START_DAY": "Start Day",
+    "END_DAY": "End Day",
+    "AFFILIATE": "Affiliate",
+    "TRANSACTION_TYPE": "Transaction Type",
+    "PAYMENT_METHOD": "Payment Method",
+    "CURRENCY": "Currency",
+    "BILLING_TYPE": "Billing Type",
+    "SEARCH": "Search",
+    "WITH_AFFILIATE": "With Affiliate",
+    "WITHOUT_AFFILIATE": "Without Affiliate",
+    "AT_LEAST_SYMBOL": "At least one symbol should be entered"
+  },
+  "E_TICKET_PAGE": {
+    "E_TICKET_SCAN": "E-Ticket Scan",
+    "TEMPLATE": "E-Ticket template",
+    "LOCATION": "E-Ticket location",
+    "DATE": "Date",
+    "HAVE_NO_NUMBER": "Don't have E-Ticket number?",
+    "SCAN": "Scan",
+    "CHECK_MANUALLY": "Check E-Ticket manually",
+    "FIRSTNAME": "First name",
+    "LASTNAME": "Last name",
+    "EMAIL": "Email",
+    "SEARCH": "Search",
+    "E_TICKET_DETAILS": "E-Ticket Details",
+    "DOWNLOAD_E_TICKET": "Download E-Ticket",
+    "NUMBER": "Number",
+    "TICKET_ID": "Ticket ID",
+    "RETRY": "Retry",
+    "CHECK_WITH_NUMBER": "Check with number",
+    "MARK_AS": "Mark as used",
+    "POPUP_MARK_AS_USED_TITLE": "Mark as used?",
+    "POPUP_MARK_AS_USED_TEXT": "The E-Ticket will be marked as used",
+    "POPUP_MARK_AS_UNUSED_TITLE": "Mark as unused?",
+    "POPUP_MARK_AS_UNUSED_TEXT": "The E-Ticket will be marked as unused (and can be used again, if it is not blocked)",
+    "MARK": "Mark",
+    "SEARCH_RESULTS": "Search results",
+    "TRANSACTION_ID": "Transaction ID",
+    "STATUS": "Status",
+    "VALID": "Valid",
+    "USED": "Used",
+    "UNUSED": "Unused",
+    "ENTER_E_TICKET_NUMBER_BELOW": "Enter E-Ticket number below to check if it is valid",
+    "E_TICKET_WILL_BE_MARKED": "E-Ticket will e marked as used",
+    "CHECK_E_TICKET": "Check E-Ticket",
+    "20_NUMBER_LIMIT": "E-Ticket number must be 20 symbols!",
+    "ONLY_DIGITS": "E-Ticket number must include only digits!",
+    "EMPTY_NUMBER": "Not entered E-Ticket number!",
+    "NO_PARAMS": "No 'E-Ticket template' or 'Event location' field is selected!",
+    "E_TICKET_VALID": "E-Ticket Valid",
+    "ALREADY_USED": "Already Used",
+    "ACCOUNT_ID": "DS 24 ACCOUNT ID",
+    "NOT_FOUND": "No tickets found"
+  },
   "SETTINGS_PAGE": {
     "HEADER": "Settings",
     "LANGUAGE": "Language",
