--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,177 +1,177 @@
 {
   "LOGIN_PAGE": {
-    "CONNECTION_PROBLEM": "Connection problem",
-    "LOGIN_TO_CONTINUE": "Login to continue",
-    "DIGISTORE_ID_EMAIL": "Digistore24-ID/Email",
-    "DIGISTROE_ID_REQUIRED": "Digistore24-ID/Email is required",
-    "PASSWORD": "Password",
-    "FORGOT_PASSWORD": "Forgot password?",
-    "NOT_A_MEMBER": "Not a member yet?",
-    "REGISTER": "Register",
-    "IS_REUQIRED": "is required",
-    "MIN_LENGTH": "Min length of",
-    "IS": "is"
+    "CONNECTION_PROBLEM": "Verbindungsproblem",
+    "LOGIN_TO_CONTINUE": "Anmelden um fortzufahren",
+    "DIGISTORE_ID_EMAIL": "Digistore24-ID / Email",
+    "DIGISTROE_ID_REQUIRED": "Digistore24-ID / Email wird benötigt",
+    "PASSWORD": "Passwort",
+    "FORGOT_PASSWORD": "Passwort vergessen?",
+    "NOT_A_MEMBER": "Noch kein Mitglied?",
+    "REGISTER": "Neu registrieren",
+    "IS_REUQIRED": "Wird benötigt",
+    "MIN_LENGTH": "Mindestlänge von",
+    "IS": "ist"
   },
-  "CANCEL": "Cancel",
-  "LOGIN": "Login",
-  "BACK": "Back",
-  "APPLY": "Apply",
-  "OK": "Ok",
-  "DONE": "Done",
-  "CHOOSE": "Choose",
-  "ALL": "All",
-  "ANY": "Any",
-  "WITHIN": "Within",
-  "WITHOUT": "Without",
-  "ENTER": "Enter",
+  "CANCEL": "Stornieren",
+  "LOGIN": "Anmeldung",
+  "BACK": "Zurück",
+  "APPLY": "Sich bewerben",
+  "OK": "OK",
+  "DONE": "Erledigt",
+  "CHOOSE": "Wählen",
+  "ALL": "Alle",
+  "ANY": "Irgendein",
+  "WITHIN": "Innerhalb",
+  "WITHOUT": "Ohne",
+  "ENTER": "Eingeben",
   "GENERAL": {
-    "TRANSACTIONS": "Transactions",
-    "EARNINGS": "Earnings",
+    "TRANSACTIONS": "Transaktionen",
+    "EARNINGS": "Verdienste",
     "E_TICKET": "E-Ticket",
-    "SETTINGS": "Settings",
-    "TODAY": "Today",
-    "THIS_DAY": "This Day",
-    "THIS_WEEK": "This Week",
-    "THIS_MONTH": "This Month",
-    "THIS_YEAR": "This Year",
-    "CURRENCY": "Currency",
-    "NO_RESULTS_FOUND": "No results found"
+    "SETTINGS": "Einstellungen",
+    "TODAY": "Heute",
+    "THIS_DAY": "Dieser Tag",
+    "THIS_WEEK": "Diese Woche",
+    "THIS_MONTH": "Diesen Monat",
+    "THIS_YEAR": "Dieses Jahr",
+    "CURRENCY": "Währung",
+    "NO_RESULTS_FOUND": "keine Ergebnisse gefunden"
   },
   "LANDING_PAGE": {
-    "WELCOME": "Welcome to your automated sales platform!"
+    "WELCOME": "Willkommen bei Ihrer automatisierten Verkaufsplattform!"
   },
-  "LOADING_TEXT": "Please wait...",
+  "LOADING_TEXT": "Warten Sie mal...",
   "EARNINGS_PAGE": {
-    "TOTAL": "Total",
-    "MONTH": "Month",
-    "QUARTER": "Quarter",
-    "YEAR": "Year",
-    "GROSS": "Gross",
-    "NET_COMMISSION": "Net Commission",
-    "TOTAL_GROSS": "Total Gross",
-    "TOTAL_NET": "Total Net",
-    "CURRENCY_DESCRIPTION": "Please choose currency for data to be displayed"
+    "TOTAL": "Gesamt",
+    "MONTH": "Monat",
+    "QUARTER": "Quartal",
+    "YEAR": "Jahr",
+    "GROSS": "Brutto",
+    "NET_COMMISSION": "Nettokommission",
+    "TOTAL_GROSS": "Gesamtbrutto",
+    "TOTAL_NET": "Gesamtnetz",
+    "CURRENCY_DESCRIPTION": "Bitte wählen Sie die Währung für die anzuzeigenden Daten"
   },
   "TRANSACTIONS_PAGE": {
-    "SORT_BY": "Sort By",
-    "SEARCH_FILTERS": "Search & Filters",
-    "DATE": "Date",
-    "PRODUCT_NAME": "Product Name/Order ID",
-    "YOUR_EARNINGS": "Your Earnings",
-    "THIS": "This",
-    "NO_RESULTS": "No results found.",
-    "SEE_ALL_TRANSACTIONS": "Try to go through all transactions."
+    "SORT_BY": "Sortiere nach",
+    "SEARCH_FILTERS": "Suche & Filter",
+    "DATE": "Datum",
+    "PRODUCT_NAME": "Produktname / Bestellnummer",
+    "YOUR_EARNINGS": "Ihre Einnahmen",
+    "THIS": "Dies",
+    "NO_RESULTS": "Keine Ergebnisse gefunden.",
+    "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchlaufen."
   },
   "TRANSACTION_DETAILS_PAGE": {
-    "TRANSACTIONS": "Transactions",
-    "PRODUCT_NAME": "Product Name / ID",
-    "ORDER_ID": "Order ID",
-    "TRANSACTION_ID": "Transaction ID",
-    "GROSS_AMOUNT": "Gross Amount",
-    "NET_COMMISSION": "Net Commission",
-    "TRANSACTION_TYPE": "Transaction Type",
-    "PAYMENT_METHOD": "Payment Method",
-    "CURRENCY": "Currency",
-    "CUSTOMER_DETAILS": "Customer Details",
+    "TRANSACTIONS": "Transaktionen",
+    "PRODUCT_NAME": "Produktname / ID",
+    "ORDER_ID": "Auftragsnummer",
+    "TRANSACTION_ID": "Transaktions-ID",
+    "GROSS_AMOUNT": "Bruttobetrag",
+    "NET_COMMISSION": "Nettokommission",
+    "TRANSACTION_TYPE": "Art der Transaktion",
+    "PAYMENT_METHOD": "Bezahlverfahren",
+    "CURRENCY": "Währung",
+    "CUSTOMER_DETAILS": "Kundendetails",
     "NAME": "Name",
     "EMAIL": "Email",
-    "PHONE_NUMBER": "Phone number",
-    "AFFILIATE": "Affiliate",
-    "REPORT_CUSTOMER": "Report Customer"
+    "PHONE_NUMBER": "Telefonnummer",
+    "AFFILIATE": "Partner",
+    "REPORT_CUSTOMER": "Bericht Kunde"
   },
   "REPORT_PAGE": {
-    "REPORT": "Report",
-    "REQUIRED": "Required",
-    "COMMENT_PLACEHOLDER": "Why do you think that this is a fraud order?",
+    "REPORT": "Bericht",
+    "REQUIRED": "Erforderlich",
+    "COMMENT_PLACEHOLDER": "Warum glauben Sie, dass dies eine Betrugsorder ist?",
     "NAME": "Name",
     "EMAIL": "Email",
-    "AFFILIATE_DESC": "This purchase was made without affiliate",
-    "REPORT_AFFILIATE": "Report Affiliate",
-    "REPORT_BUTTON": "Report",
-    "ORDER_ID": "Order ID"
+    "AFFILIATE_DESC": "Dieser Kauf wurde ohne Affiliate gemacht",
+    "REPORT_AFFILIATE": "Affiliate melden",
+    "REPORT_BUTTON": "Bericht",
+    "ORDER_ID": "Auftragsnummer"
   },
   "SORT_BY_PAGE": {
-    "SORT_BY": "Sort By",
-    "PRODUCT_NAME": "Product name",
-    "EARNING_AMOUNT": "Earning amount",
-    "DATE": "Date",
-    "ASC": "Ascending",
-    "DESC": "Descending",
-    "HIGHEST": "Highest first",
-    "LOWEST": "Lowest first",
-    "THIS": "This"
+    "SORT_BY": "Sortiere nach",
+    "PRODUCT_NAME": "Produktname",
+    "EARNING_AMOUNT": "Verdienstbetrag",
+    "DATE": "Datum",
+    "ASC": "Aufsteigend",
+    "DESC": "Absteigend",
+    "HIGHEST": "Höchster zuerst",
+    "LOWEST": "Niedrigste zuerst",
+    "THIS": "Dies"
   },
   "SEARCH_FILTERS_PAGE": {
-    "SEARCH_FILTERS": "Search & Filters",
-    "DETAILED_SEARCH": "Detailed search",
-    "ORDER_ID": "Order ID",
-    "CLEAR_ALL": "Clear All",
-    "PRODUCT_NAME": "Product name",
-    "CUSTOMER_INFO": "Customer Info",
-    "FIRSTNAME": "First name",
-    "LASTNAME": "Last name",
+    "SEARCH_FILTERS": "Suche & Filter",
+    "DETAILED_SEARCH": "Detailsuche",
+    "ORDER_ID": "Auftragsnummer",
+    "CLEAR_ALL": "Alles löschen",
+    "PRODUCT_NAME": "Produktname",
+    "CUSTOMER_INFO": "Kundeninformation",
+    "FIRSTNAME": "Vorname",
+    "LASTNAME": "Familienname, Nachname",
     "EMAIL": "Email",
-    "TRANSACTION_DETAILS": "Transaction details",
-    "START_DAY": "Start Day",
-    "END_DAY": "End Day",
-    "AFFILIATE": "Affiliate",
-    "TRANSACTION_TYPE": "Transaction Type",
-    "PAYMENT_METHOD": "Payment Method",
-    "CURRENCY": "Currency",
-    "BILLING_TYPE": "Billing Type",
-    "SEARCH": "Search",
-    "WITH_AFFILIATE": "With Affiliate",
-    "WITHOUT_AFFILIATE": "Without Affiliate",
-    "AT_LEAST_SYMBOL": "At least one symbol should be entered"
+    "TRANSACTION_DETAILS": "Transaktionsdetails",
+    "START_DAY": "Starttag",
+    "END_DAY": "Endtag",
+    "AFFILIATE": "Partner",
+    "TRANSACTION_TYPE": "Art der Transaktion",
+    "PAYMENT_METHOD": "Bezahlverfahren",
+    "CURRENCY": "Währung",
+    "BILLING_TYPE": "Abrechnungsart",
+    "SEARCH": "Suche",
+    "WITH_AFFILIATE": "Mit Partner",
+    "WITHOUT_AFFILIATE": "Ohne Partner",
+    "AT_LEAST_SYMBOL": "Mindestens ein Symbol sollte eingegeben werden"
   },
   "E_TICKET_PAGE": {
-    "E_TICKET_SCAN": "E-Ticket Scan",
-    "TEMPLATE": "E-Ticket template",
-    "LOCATION": "E-Ticket location",
-    "DATE": "Date",
-    "HAVE_NO_NUMBER": "Don't have E-Ticket number?",
+    "E_TICKET_SCAN": "E-Ticket-Scan",
+    "TEMPLATE": "E-Ticketvorlage",
+    "LOCATION": "E-Ticket Ort",
+    "DATE": "Datum",
+    "HAVE_NO_NUMBER": "Haben Sie keine E-Ticket-Nummer?",
     "SCAN": "Scan",
-    "CHECK_MANUALLY": "Check E-Ticket manually",
-    "FIRSTNAME": "First name",
-    "LASTNAME": "Last name",
+    "CHECK_MANUALLY": "E-Ticket manuell prüfen",
+    "FIRSTNAME": "Vorname",
+    "LASTNAME": "Familienname, Nachname",
     "EMAIL": "Email",
-    "SEARCH": "Search",
-    "E_TICKET_DETAILS": "E-Ticket Details",
-    "DOWNLOAD_E_TICKET": "Download E-Ticket",
-    "NUMBER": "Number",
-    "TICKET_ID": "Ticket ID",
-    "RETRY": "Retry",
-    "CHECK_WITH_NUMBER": "Check with number",
-    "MARK_AS": "Mark as used",
-    "POPUP_MARK_AS_USED_TITLE": "Mark as used?",
-    "POPUP_MARK_AS_USED_TEXT": "The E-Ticket will be marked as used",
-    "POPUP_MARK_AS_UNUSED_TITLE": "Mark as unused?",
-    "POPUP_MARK_AS_UNUSED_TEXT": "The E-Ticket will be marked as unused (and can be used again, if it is not blocked)",
-    "MARK": "Mark",
-    "SEARCH_RESULTS": "Search results",
-    "TRANSACTION_ID": "Transaction ID",
+    "SEARCH": "Suche",
+    "E_TICKET_DETAILS": "E-Ticket-Details",
+    "DOWNLOAD_E_TICKET": "E-Ticket herunterladen",
+    "NUMBER": "Nummer",
+    "TICKET_ID": "Ticket Nummer",
+    "RETRY": "Wiederholen",
+    "CHECK_WITH_NUMBER": "Überprüfen Sie mit Nummer",
+    "MARK_AS": "Als gebraucht markieren",
+    "POPUP_MARK_AS_USED_TITLE": "Als gebraucht markieren?",
+    "POPUP_MARK_AS_USED_TEXT": "Das E-Ticket wird als gebraucht gekennzeichnet",
+    "POPUP_MARK_AS_UNUSED_TITLE": "Als unbenutzt markieren?",
+    "POPUP_MARK_AS_UNUSED_TEXT": "Das E-Ticket wird als nicht verwendet markiert (und kann wieder verwendet werden, wenn es nicht blockiert ist)",
+    "MARK": "Kennzeichen",
+    "SEARCH_RESULTS": "Suchergebnisse",
+    "TRANSACTION_ID": "Transaktions-ID",
     "STATUS": "Status",
-    "VALID": "Valid",
-    "USED": "Used",
-    "UNUSED": "Unused",
-    "ENTER_E_TICKET_NUMBER_BELOW": "Enter E-Ticket number below to check if it is valid",
-    "E_TICKET_WILL_BE_MARKED": "E-Ticket will e marked as used",
-    "CHECK_E_TICKET": "Check E-Ticket",
-    "20_NUMBER_LIMIT": "E-Ticket number must be 20 symbols!",
-    "ONLY_DIGITS": "E-Ticket number must include only digits!",
-    "EMPTY_NUMBER": "Not entered E-Ticket number!",
-    "NO_PARAMS": "No 'E-Ticket template' or 'Event location' field is selected!",
-    "E_TICKET_VALID": "E-Ticket Valid",
-    "ALREADY_USED": "Already Used",
-    "ACCOUNT_ID": "DS 24 ACCOUNT ID",
-    "NOT_FOUND": "No tickets found"
+    "VALID": "Gültig",
+    "USED": "Benutzt",
+    "UNUSED": "Unbenutzt",
+    "ENTER_E_TICKET_NUMBER_BELOW": "Geben Sie unten E-Ticket-Nummer ein, um zu prüfen, ob es gültig ist",
+    "E_TICKET_WILL_BE_MARKED": "E-Ticket wird als verwendet markiert",
+    "CHECK_E_TICKET": "E-Ticket prüfen",
+    "20_NUMBER_LIMIT": "E-Ticket-Nummer muss 20 Symbole haben!",
+    "ONLY_DIGITS": "E-Ticket-Nummer muss nur Ziffern enthalten!",
+    "EMPTY_NUMBER": "Nicht eingegebene E-Ticket-Nummer!",
+    "NO_PARAMS": "Nein 'E-Ticket-Vorlage' oder 'Veranstaltungsort' ist ausgewählt!",
+    "E_TICKET_VALID": "E-Ticket gültig",
+    "ALREADY_USED": "Schon benutzt",
+    "ACCOUNT_ID": "DS 24 KONTO-ID",
+    "NOT_FOUND": "Keine Tickets gefunden"
   },
   "SETTINGS_PAGE": {
-    "HEADER": "Settings",
-    "LANGUAGE": "Language",
-    "SOUND": "Sound",
-    "NOTIFY": "Notify on sale",
-    "ACCOUNT": "Account",
-    "LOGOUT": "Log out"
+    "HEADER": "Einstellungen",
+    "LANGUAGE": "Sprache",
+    "SOUND": "Klingen",
+    "NOTIFY": "Beim Verkauf benachrichtigen",
+    "ACCOUNT": "Konto",
+    "LOGOUT": "Ausloggen"
   }
 }
