--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -142,7 +142,7 @@
     "TICKET_ID": "Ticket Nummer",
     "RETRY": "Wiederholen",
     "CHECK_WITH_NUMBER": "Überprüfen Sie mit Nummer",
-    "MARK_AS": "Als gebraucht markieren",
+    "MARK_AS": "Markieren als",
     "POPUP_MARK_AS_USED_TITLE": "Als gebraucht markieren?",
     "POPUP_MARK_AS_USED_TEXT": "Das E-Ticket wird als gebraucht gekennzeichnet",
     "POPUP_MARK_AS_UNUSED_TITLE": "Als unbenutzt markieren?",
@@ -152,8 +152,8 @@
     "TRANSACTION_ID": "Transaktions-ID",
     "STATUS": "Status",
     "VALID": "Gültig",
-    "USED": "Benutzt",
-    "UNUSED": "Unbenutzt",
+    "USED": "benutzt",
+    "UNUSED": "unbenutzt",
     "ENTER_E_TICKET_NUMBER_BELOW": "Geben Sie unten E-Ticket-Nummer ein, um zu prüfen, ob es gültig ist",
     "E_TICKET_WILL_BE_MARKED": "E-Ticket wird als verwendet markiert",
     "CHECK_E_TICKET": "E-Ticket prüfen",
