--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -142,7 +142,7 @@
     "TICKET_ID": "Ticket ID",
     "RETRY": "Retry",
     "CHECK_WITH_NUMBER": "Check with number",
-    "MARK_AS": "Mark as used",
+    "MARK_AS": "Mark as",
     "POPUP_MARK_AS_USED_TITLE": "Mark as used?",
     "POPUP_MARK_AS_USED_TEXT": "The E-Ticket will be marked as used",
     "POPUP_MARK_AS_UNUSED_TITLE": "Mark as unused?",
@@ -152,8 +152,8 @@
     "TRANSACTION_ID": "Transaction ID",
     "STATUS": "Status",
     "VALID": "Valid",
-    "USED": "Used",
-    "UNUSED": "Unused",
+    "USED": "used",
+    "UNUSED": "unused",
     "ENTER_E_TICKET_NUMBER_BELOW": "Enter E-Ticket number below to check if it is valid",
     "E_TICKET_WILL_BE_MARKED": "E-Ticket will e marked as used",
     "CHECK_E_TICKET": "Check E-Ticket",
