--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -59,6 +59,9 @@
     "PRODUCT_NAME": "Produktname / Bestellnummer",
     "YOUR_EARNINGS": "Ihre Einnahmen",
     "THIS": "Dies",
+    "WEEK": "woche",
+    "MONTH": "monat",
+    "YEAR": "jahr",
     "NO_RESULTS": "Keine Ergebnisse gefunden.",
     "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchlaufen."
   },
