--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -59,6 +59,9 @@
     "PRODUCT_NAME": "Product Name/Order ID",
     "YOUR_EARNINGS": "Your Earnings",
     "THIS": "This",
+    "WEEK": "week",
+    "MONTH": "month",
+    "YEAR": "year",
     "NO_RESULTS": "No results found.",
     "SEE_ALL_TRANSACTIONS": "Try to go through all transactions."
   },
