fixed and translated ParamsPage and fix TicketDetailsPage

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -108,20 +108,20 @@
     "SEARCH_FILTERS": "Search & Filters",
     "DETAILED_SEARCH": "Detailed search",
     "ORDER_ID": "Order ID",
-    "CLEAR_ALL": "Clear All",
+    "CLEAR_ALL": "Clear all",
     "PRODUCT_NAME": "Product name",
-    "CUSTOMER_INFO": "Customer Info",
+    "CUSTOMER_INFO": "Customer info",
     "FIRSTNAME": "First name",
     "LASTNAME": "Last name",
     "EMAIL": "Email",
     "TRANSACTION_DETAILS": "Transaction details",
-    "START_DAY": "Start Day",
-    "END_DAY": "End Day",
+    "START_DAY": "Start day",
+    "END_DAY": "End day",
     "AFFILIATE": "Affiliate",
-    "TRANSACTION_TYPE": "Transaction Type",
-    "PAYMENT_METHOD": "Payment Method",
+    "TRANSACTION_TYPE": "Transaction type",
+    "PAYMENT_METHOD": "Payment method",
     "CURRENCY": "Currency",
-    "BILLING_TYPE": "Billing Type",
+    "BILLING_TYPE": "Billing type",
     "SEARCH": "Search",
     "WITH_AFFILIATE": "With Affiliate",
     "WITHOUT_AFFILIATE": "Without Affiliate",
