--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,6 +12,26 @@
     "MIN_LENGTH": "Min length of",
     "IS": "is"
   },
+  "MONTHS": {
+    "January": "January",
+    "February": "February",
+    "March": "March",
+    "April:": "April",
+    "May": "May",
+    "June": "June",
+    "July": "July",
+    "August": "August",
+    "September": "September",
+    "October": "October",
+    "November": "November",
+    "December": "December"
+  },
+  "QUARTERS": {
+    "Q1": "January, February, March",
+    "Q2": "April, May, June",
+    "Q3": "July, August, September",
+    "Q4": "October, November, December"
+  },
   "CANCEL": "Cancel",
   "LOGIN": "Login",
   "BACK": "Back",
