fix search button

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -159,7 +159,7 @@
     "SCAN": "Scan",
     "CHECK_MANUALLY": "E-Ticket manuell prüfen",
     "FIRSTNAME": "Vorname",
-    "LASTNAME": "Familienname, Nachname",
+    "LASTNAME": "Familienname",
     "EMAIL": "Email",
     "SEARCH": "Suche",
     "E_TICKET_DETAILS": "E-Ticket-Details",
