--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,8 +34,8 @@
   },
   "ERROR": "Etwas ist schief gelaufen",
   "NET_ERROR": "Probleme mit dem Netzwerk oder mit dem Server",
-  "CANCEL": "Stornieren",
-  "LOGIN": "Anmeldung",
+  "CANCEL": "Abbrechen",
+  "LOGIN": "Login",
   "BACK": "Zurück",
   "APPLY": "Sich bewerben",
   "OK": "OK",
@@ -162,12 +162,12 @@
     "TEMPLATE": "E-Ticket-Vorlage",
     "LOCATION": "Veranstaltungsort",
     "DATE": "Datum",
-    "HAVE_NO_NUMBER": "Haben Sie keine E-Ticket-Nummer?",
+    "HAVE_NO_NUMBER": "Sie haben keine E-Ticket-Nummer?",
     "SCAN": "Scan",
     "CHECK_MANUALLY": "E-Ticket manuell prüfen",
     "FIRSTNAME": "Vorname",
-    "LASTNAME": "Familienname",
-    "EMAIL": "Email",
+    "LASTNAME": "Nachname",
+    "EMAIL": "E-Mail",
     "SEARCH": "Suche",
     "E_TICKET_DETAILS": "E-Ticket-Details",
     "DOWNLOAD_E_TICKET": "E-Ticket herunterladen",
@@ -176,6 +176,7 @@
     "RETRY": "Wiederholen",
     "CHECK_WITH_NUMBER": "Mit E-Ticket Nummer prüfen",
     "MARK_AS": "Markieren als",
+    "MARK_AS_USED": "Entwerten",
     "POPUP_MARK_AS_USED_TITLE": "Als gebraucht markieren?",
     "POPUP_MARK_AS_USED_TEXT": "Das E-Ticket wird als gebraucht gekennzeichnet",
     "POPUP_MARK_AS_UNUSED_TITLE": "Als unbenutzt markieren?",
@@ -188,7 +189,7 @@
     "USED": "benutzt",
     "UNUSED": "unbenutzt",
     "ENTER_E_TICKET_NUMBER_BELOW": "Geben Sie unten die E-Ticket-Nummer ein, um zu prüfen, ob es gültig ist",
-    "E_TICKET_WILL_BE_MARKED": "E-Ticket wird entwertet",
+    "E_TICKET_WILL_BE_MARKED": "E-Ticket wird dabei entwertet",
     "CHECK_E_TICKET": "E-Ticket prüfen",
     "20_NUMBER_LIMIT": "E-Ticket-Nummer muss 20 Symbole lang sein!",
     "ONLY_DIGITS": "E-Ticket-Nummer darf nur Ziffern enthalten!",
@@ -212,7 +213,7 @@
     "LOGOUT": "Ausloggen",
     "MESSAGES": {
       "LOG_OUT": "Dadurch werden Sie von allen verbundenen Konten abgemeldet",
-      "USER_WAS_ADDED_EARLIER": "Konto wurde früher hinzugefügt",
+      "USER_WAS_ADDED_EARLIER": "Konto wurde bereits hinzugefügt",
       "DELETE_ACCOUNT": "Konto löschen?"
     }
   }
