--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -16,7 +16,7 @@
     "January": "Januar",
     "February": "Februar",
     "March": "März",
-    "April:": "April",
+    "April": "April",
     "May": "Mai",
     "June": "Juni",
     "July": "Juli",
@@ -81,14 +81,15 @@
     "SORT_BY": "Sortiere nach",
     "SEARCH_FILTERS": "Suche & Filter",
     "DATE": "Datum",
-    "PRODUCT_NAME": "Produktname / Bestellnummer",
+    "PRODUCT_NAME": "Produktname",
     "YOUR_EARNINGS": "Ihre Einnahmen",
     "THIS": "Diese",
     "WEEK": "Woche",
     "MONTH": "Monat",
     "YEAR": "Jahr",
+    "TEXT_INPUT": "Suchen...",
     "NO_RESULTS": "Keine Ergebnisse gefunden.",
-    "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchlaufen."
+    "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchsuchen."
   },
   "TRANSACTION_DETAILS_PAGE": {
     "TRANSACTIONS": "Transaktionen",
