--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -16,7 +16,7 @@
     "January": "January",
     "February": "February",
     "March": "March",
-    "April:": "April",
+    "April": "April",
     "May": "May",
     "June": "June",
     "July": "July",
@@ -87,6 +87,7 @@
     "WEEK": "week",
     "MONTH": "month",
     "YEAR": "year",
+    "TEXT_INPUT": "Text input",
     "NO_RESULTS": "No results found.",
     "SEE_ALL_TRANSACTIONS": "Try to go through all transactions."
   },
