--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -37,7 +37,7 @@
   "CANCEL": "Abbrechen",
   "LOGIN": "Login",
   "BACK": "Zurück",
-  "APPLY": "Sich bewerben",
+  "APPLY": "Anwenden",
   "OK": "OK",
   "DONE": "Erledigt",
   "CHOOSE": "Wählen",
