add native back button logic

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -34,6 +34,7 @@
   },
   "ERROR": "Etwas ist schief gelaufen",
   "NET_ERROR": "Probleme mit dem Netzwerk oder mit dem Server",
+  "EXIT_MSG": "Möchten Sie die App beenden?",
   "CANCEL": "Abbrechen",
   "LOGIN": "Login",
   "BACK": "Zurück",
@@ -42,6 +43,7 @@
   "DONE": "Erledigt",
   "CHOOSE": "Wählen",
   "EDIT": "Bearbeiten",
+  "EXIT": "Ausfahrt",
   "YES": "Ja",
   "NO": "Nein",
   "ALL": "Alle",
