--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
   },
   "ERROR": "Something went wrong",
   "NET_ERROR": "Problems with the network or with the server",
+  "EXIT_MSG": "Do you want to exit the app?",
   "CANCEL": "Cancel",
   "LOGIN": "Login",
   "BACK": "Back",
@@ -42,6 +43,7 @@
   "DONE": "Done",
   "CHOOSE": "Choose",
   "EDIT": "Edit",
+  "EXIT": "Exit",
   "YES": "Yes",
   "NO": "No",
   "ALL": "All",
