add current period when transactions not found

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -91,6 +91,7 @@
     "YEAR": "Jahr",
     "TEXT_INPUT": "Suchen...",
     "NO_RESULTS": "Keine Ergebnisse gefunden.",
+    "NO_RESULTS_FOR_PERIOD": "Keine Ergebnisse für {{period}} gefunden.",
     "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchsuchen."
   },
   "TRANSACTION_DETAILS_PAGE": {
