--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -57,6 +57,7 @@
     "E_TICKET": "E-Ticket",
     "SETTINGS": "Einstellungen",
     "TODAY": "Heute",
+    "today": "heute",
     "THIS_DAY": "Dieser Tag",
     "THIS_WEEK": "Diese Woche",
     "THIS_MONTH": "Diesen Monat",
