--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,6 +57,7 @@
     "E_TICKET": "E-Ticket",
     "SETTINGS": "Settings",
     "TODAY": "Today",
+    "today": "today",
     "THIS_DAY": "This Day",
     "THIS_WEEK": "This Week",
     "THIS_MONTH": "This Month",
