Change sort_by and transactions details page updates

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -85,7 +85,7 @@
     "SEARCH_FILTERS": "Search & Filters",
     "DATE": "Date",
     "PRODUCT_NAME": "Product Name/Order ID",
-    "YOUR_EARNINGS": "Your Earnings",
+    "YOUR_EARNINGS": "Gross amount",
     "THIS": "This",
     "WEEK": "week",
     "MONTH": "month",
@@ -97,7 +97,8 @@
     "NO_RESULTS_FOR_PERIOD_WEEK": "No results for this week found.",
     "NO_RESULTS_FOR_PERIOD_MONTH": "No results for this month found.",
     "NO_RESULTS_FOR_PERIOD_YEAR": "No results for this year found.",
-    "SEE_ALL_TRANSACTIONS": "Try to go through all transactions."
+    "SEE_ALL_TRANSACTIONS": "Go to ",
+    "SEE_ALL_TRANSACTIONS_LINK": "all transactions"
   },
   "TRANSACTION_DETAILS_PAGE": {
     "TRANSACTIONS": "Transactions",
@@ -132,7 +133,7 @@
   "SORT_BY_PAGE": {
     "SORT_BY": "Sort By",
     "PRODUCT_NAME": "Product name",
-    "EARNING_AMOUNT": "Earning amount",
+    "EARNING_AMOUNT": "Gross amount",
     "DATE": "Date",
     "ASC": "Ascending",
     "DESC": "Descending",
