--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -85,7 +85,7 @@
     "SEARCH_FILTERS": "Suche & Filter",
     "DATE": "Datum",
     "PRODUCT_NAME": "Produktname",
-    "YOUR_EARNINGS": "Ihre Einnahmen",
+    "YOUR_EARNINGS": "Bruttobetrag",
     "THIS": "Diese",
     "WEEK": "Woche",
     "MONTH": "Monat",
@@ -97,7 +97,8 @@
     "NO_RESULTS_FOR_PERIOD_WEEK": "Keine Ergebnisse für diese Woche gefunden.",
     "NO_RESULTS_FOR_PERIOD_MONTH": "Keine Ergebnisse für diesen Monat gefunden.",
     "NO_RESULTS_FOR_PERIOD_YEAR": "Keine Ergebnisse für dieses Jahr gefunden.",
-    "SEE_ALL_TRANSACTIONS": "Versuchen Sie, alle Transaktionen zu durchsuchen."
+    "SEE_ALL_TRANSACTIONS": "Gehe zu ",
+    "SEE_ALL_TRANSACTIONS_LINK": "allen Transaktionen"
   },
   "TRANSACTION_DETAILS_PAGE": {
     "TRANSACTIONS": "Transaktionen",
@@ -132,7 +133,7 @@
   "SORT_BY_PAGE": {
     "SORT_BY": "Sortiere nach",
     "PRODUCT_NAME": "Produktname",
-    "EARNING_AMOUNT": "Verdienstbetrag",
+    "EARNING_AMOUNT": "Bruttobetrag",
     "DATE": "Datum",
     "ASC": "Aufsteigend",
     "DESC": "Absteigend",
