--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -167,7 +167,9 @@
     "AT_LEAST_SYMBOL": "At least one symbol should be entered",
     "MIN_LENGTH": "Minimum number of characters must be",
     "PATTERN": "Only numbers and letters (must be at least 1 letter)",
-    "INVALID_EMAIL": "Invalid Email"
+    "INVALID_EMAIL": "Invalid Email",
+    "DONE": "Done",
+    "CANCEL": "Cancel"
   },
   "E_TICKET_PAGE": {
     "E_TICKET_SCAN": "E-Ticket scan",
