--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -165,7 +165,7 @@
     "WITHOUT_AFFILIATE": "Without Affiliate",
     "ENTER_AFFILIATE": "Enter Affiliate",
     "AT_LEAST_SYMBOL": "At least one symbol should be entered",
-    "MIN_LENGTH": "Minimum number of characters must be",
+    "MIN_LENGTH": "Minimum number of characters must be {{ value }}",
     "PATTERN": "Only numbers and letters (must be at least 1 letter)",
     "INVALID_EMAIL": "Invalid Email",
     "DONE": "Done",
