--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -90,7 +90,7 @@
     "WEEK": "week",
     "MONTH": "month",
     "YEAR": "year",
-    "TEXT_INPUT": "Text input",
+    "TEXT_INPUT": "Search Product...",
     "NO_RESULTS": "No results found.",
     "NO_RESULTS_FOR_PERIOD": "No results for {{period}} found.",
     "NO_RESULTS_FOR_PERIOD_DAY": "No results for today found.",
@@ -147,7 +147,7 @@
     "ORDER_ID": "Order ID",
     "PRODUCT_ID": "Product ID",
     "CLEAR_ALL": "Clear all",
-    "PRODUCT_NAME": "Product",
+    "PRODUCT_NAME": "Product name",
     "CUSTOMER_INFO": "Customer info",
     "FIRSTNAME": "First name",
     "LASTNAME": "Last name",
@@ -208,7 +208,7 @@
     "CHECK_E_TICKET": "Check E-Ticket",
     "20_NUMBER_LIMIT": "E-Ticket number must be 20 symbols!",
     "ONLY_DIGITS": "E-Ticket number must include only digits!",
-    "EMPTY_NUMBER": "Not entered E-Ticket number!",
+    "EMPTY_NUMBER": "Please enter E-Ticket number",
     "NO_PARAMS": "No 'E-Ticket template' or 'Event location' field is selected!",
     "FAILURE": "Failure",
     "E_TICKET_VALID": "E-Ticket Valid",
