--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -90,7 +90,7 @@
     "WEEK": "Woche",
     "MONTH": "Monat",
     "YEAR": "Jahr",
-    "TEXT_INPUT": "Suchen...",
+    "TEXT_INPUT": "Produkt suchen...",
     "NO_RESULTS": "Keine Ergebnisse gefunden.",
     "NO_RESULTS_FOR_PERIOD": "Keine Ergebnisse für {{period}} gefunden.",
     "NO_RESULTS_FOR_PERIOD_DAY": "Keine Ergebnisse für heute gefunden.",
@@ -147,7 +147,7 @@
     "ORDER_ID": "Bestell-ID",
     "PRODUCT_ID": "Produkt-ID",
     "CLEAR_ALL": "Zurücksetzen",
-    "PRODUCT_NAME": "Produkt",
+    "PRODUCT_NAME": "Produktname",
     "CUSTOMER_INFO": "Kundeninformation",
     "FIRSTNAME": "Vorname",
     "LASTNAME": "Nachname",
@@ -168,7 +168,7 @@
     "MIN_LENGTH": "Mindestlänge von {{value}} Zeichen",
     "PATTERN": "Nur Zahlen und Buchstaben (muss mindestens 1 Buchstabe sein)",
     "INVALID_EMAIL": "Ungültige E-Mail",
-    "DONE": "Erledigt",
+    "DONE": "Fertig",
     "CANCEL": "Abbrechen"
   },
   "E_TICKET_PAGE": {
@@ -192,11 +192,11 @@
     "CHECK_WITH_NUMBER": "Mit E-Ticket Nummer prüfen",
     "MARK_AS": "Markieren als",
     "MARK_AS_USED": "Entwerten",
-    "POPUP_MARK_AS_USED_TITLE": "Als gebraucht markieren?",
-    "POPUP_MARK_AS_USED_TEXT": "Das E-Ticket wird als gebraucht gekennzeichnet",
+    "POPUP_MARK_AS_USED_TITLE": "E-Ticket entwerten?",
+    "POPUP_MARK_AS_USED_TEXT": "Das E-Ticket wird als benutzt gekennzeichnet",
     "POPUP_MARK_AS_UNUSED_TITLE": "Als unbenutzt markieren?",
     "POPUP_MARK_AS_UNUSED_TEXT": "Das E-Ticket wird als nicht verwendet markiert (und kann wieder verwendet werden, wenn es nicht blockiert ist)",
-    "MARK": "Kennzeichen",
+    "MARK": "Entwerten",
     "SEARCH_RESULTS": "Suchergebnisse",
     "TRANSACTION_ID": "Transaktions-ID",
     "STATUS": "Status",
