--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -98,7 +98,7 @@
     "NO_RESULTS_FOR_PERIOD_MONTH": "Keine Ergebnisse für diesen Monat gefunden.",
     "NO_RESULTS_FOR_PERIOD_YEAR": "Keine Ergebnisse für dieses Jahr gefunden.",
     "SEE_ALL_TRANSACTIONS": "Gehe zu ",
-    "SEE_ALL_TRANSACTIONS_LINK": "allen Transaktionen"
+    "SEE_ALL_TRANSACTIONS_LINK": "Suche & Filter"
   },
   "TRANSACTION_DETAILS_PAGE": {
     "TRANSACTIONS": "Transaktionen",
