--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -98,7 +98,7 @@
     "NO_RESULTS_FOR_PERIOD_MONTH": "No results for this month found.",
     "NO_RESULTS_FOR_PERIOD_YEAR": "No results for this year found.",
     "SEE_ALL_TRANSACTIONS": "Go to ",
-    "SEE_ALL_TRANSACTIONS_LINK": "all transactions"
+    "SEE_ALL_TRANSACTIONS_LINK": "Search & Filter"
   },
   "TRANSACTION_DETAILS_PAGE": {
     "TRANSACTIONS": "Transactions",
